# music_type_classifier

./: README.md  pyproject.toml
music_type_classifier/: dataset_y.npy  generate_dataset.py  generate_label.py  just_visualize_labels.py  kmeans.py  pca.py  preprocess_wavs.py  settings.py  svm.py  xbgoost.py
tests/: test_music_type_classifier.py
