[tool.poetry]
name = "music_type_classifier"
version = "0.1.0"
description = ""
authors = ["KYHSGeekCode <jourhyang123@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
opensmile = { git = "https://github.com/KYHSGeekCode/opensmile-python.git", branch = "master" }
audresample = { git = "https://github.com/KYHSGeekCode/audresample.git", branch = "master" }
numpy = "^1.22.3"
scipy = "1.9.0.dev0+1210.dd27ac7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
